<resources>
    <string name="app_name" translatable="false">BaseApp</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email/Usuario</string>
    <string name="prompt_password">Clave</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="action_sign_in_google" translatable="false">Google</string>
    <string name="welcome">"Bienvenido !"</string>
    <string name="invalid_username">Nombre de usuario inválido</string>
    <string name="invalid_password">La clave debe ser mayor de 5 caracteres</string>
    <string name="login_failed">"No pudo entrar"</string>

    // ---- General Strings ----
    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>
    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Entrar</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Enviar Link</string>
    <string name="sign_out">Salir</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Firmado</string>
    <string name="signed_out">Terminado</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Reenviar</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Código Enviado</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase UID: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="generic_title_text">OAuth Sign In</string>
    <string name="generic_signin_fmt">Sign In with %s</string>
    <string name="generic_status_fmt">User: %s (%s)</string>
    <string name="generic_label_provider">Provider:</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>

    <string name="custom_auth_signin_status_user">User ID: %s</string>
    <string name="custom_auth_signin_status_failed">Error: sign in failed</string>

    <string name="error_sign_in_failed">Sign in failed, see logs for details.</string>

    // ---- Intro Strings ----
    <string name="next">Siguiente</string>
    <string name="prev">Anterior</string>
    <string name="finish">Salir</string>
    <string name="skip">Saltar</string>
    <string name="get_started">Continuar</string>
    <string name="action_intro">Intro</string>

    <string name="heading1">¿Que es Probeis?</string>
    <string name="heading2" translatable="false"></string>
    <string name="heading3">Detección de Talento</string>
    <string name="heading4">Escuelas Regionales</string>
    <string name="heading5">Liga de Prospectos</string>
    <string name="desc1">Nuestra misión es el crecimiento integral del béisbol en México. A través de su plan
        de promoción y desarrollo, que ayude a recuperar la gloria del béisbol en el país.</string>
    <string name="desc1old">"Nuestra misión es el crecimiento del beisbol en México, que la gente lo comprenda y lo digiera."</string>
    <string name="desc2">A través de nuestra misión de desarrollo, como consecuencia habrá mas jugadores profesionales mexicanos en grandes ligas.</string>
    <string name="desc3">Eventos para identificar jugadore spotenciales a nivel nacional ya sea para desarrollarlos mas o acercarlos a equipos profesionales.</string>
    <string name="desc4">Escuelas de desarrollo de jugadores desde temprana edad para que obtengan el nivel necesario para jugar en grandes ligas.</string>
    <string name="desc5">Showcase de jugadores para que muestren sus habilidades y potencial ante scouts de grandes ligas.</string>

    <string name="title_activity_splash" translatable="false">Splash</string>
    <string name="signup">Registro</string>
    <string name="forgot">¿Olvidaste tu clave?</string>
    <string name="remember_me">Recordarme</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_last_name">Apellido paterno</string>
    <string name="hint_other_name">Apellido materno</string>
    <string name="hint_retype_password">Volver a teclear clave</string>
    <string name="hint_gender">Sexo</string>
    <string name="hint_birthday">Fecha de nacimiento</string>
    <string name="not_signed_up_label">No estas registrado?</string>
    <string name="signup_action">Regístrate aquí</string>

    <string name="gender_prompt">Seleccione una opción</string>
    <string-array name="gender_labels">
        <item>@string/gender_male</item>
        <item>@string/gender_female</item>
    </string-array>
    <string name="gender_male">Masculino</string>
    <string name="gender_female">Femenino</string>
    <string name="text_select">Select</string>
</resources>
