<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".SignUp">

    <ImageView
        android:id="@+id/backArrow"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:onClick="goBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_action_back_black" />

    <TextView
        android:id="@+id/loginText"
        android:layout_width="371dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center_horizontal"
        android:text="@string/signup"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="230dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="130dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guidelineTop">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/email"
                style="@style/EditField"
                android:drawableLeft="@drawable/ic_mail_white_24dp"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/givenName"
                style="@style/EditField"
                android:drawableStart="@drawable/ic_person_white_24dp"
                android:hint="@string/hint_name"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email" />

            <EditText
                android:id="@+id/lastName"
                style="@style/EditField"
                android:drawableStart="@drawable/ic_person_white_24dp"
                android:hint="@string/hint_last_name"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/givenName" />

            <EditText
                android:id="@+id/otherName"
                style="@style/EditField"
                android:drawableLeft="@drawable/ic_person_white_24dp"
                android:hint="@string/hint_other_name"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lastName" />

            <EditText
                android:id="@+id/password"
                style="@style/EditField"
                android:drawableLeft="@drawable/ic_lock_white_24dp"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/otherName" />

            <EditText
                android:id="@+id/retypePassword"
                style="@style/EditField"
                android:drawableStart="@drawable/ic_lock_white_24dp"
                android:hint="@string/hint_retype_password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password" />

            <LinearLayout
                android:id="@+id/birthdayLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:paddingEnd="24dp">

                <EditText
                    android:id="@+id/birthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/background_editview"
                    android:drawableLeft="@drawable/ic_event_available_white_24dp"
                    android:drawablePadding="8dp"
                    android:enabled="false"
                    android:hint="@string/hint_birthday"
                    android:padding="8dp"
                    android:textColor="@color/probeis_matte"
                    android:textColorHint="@null"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/gender_layout_radio" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/btn_gradient_white"
                    android:onClick="selectDate"
                    android:text="@string/text_select"
                    android:textAllCaps="false"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/gender_layout_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingStart="24dp"
                android:paddingEnd="24dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/hint_gender"
                    android:textColor="@color/probeis_matte"
                    android:textSize="18sp" />

                <RadioGroup
                    android:id="@+id/gender_radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:minWidth="100dp"
                        android:background="@drawable/background_editview"
                        android:buttonTint="@color/probeis_blue"
                        android:checked="true"
                        android:padding="8dp"
                        android:text="@string/gender_male"
                        android:textColor="@color/probeis_matte" />

                    <RadioButton
                        android:id="@+id/radioFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="100dp"
                        android:background="@drawable/background_editview"
                        android:buttonTint="@color/pink"
                        android:padding="8dp"
                        android:text="@string/gender_female"
                        android:textColor="@color/probeis_matte" />
                </RadioGroup>

            </LinearLayout>

            <Button
                android:id="@+id/loginButton"
                android:layout_width="194dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="48dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="48dp"
                android:background="@drawable/btn_gradient_red"
                android:enabled="true"
                android:text="@string/signup"
                android:textAllCaps="false"
                android:textColor="@color/probeis_background"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:id="@+id/findLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/loginButton">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="Ya fuiste a un evento?"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/signup_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Busca tus datos"
                    android:textColor="@color/probeis_matte"
                    android:textSize="18sp"
                    android:onClick="findPlayer"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/loginButton" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>