<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".LoginActivity">

    <!--
    <ImageView
        android:id="@+id/probeis_logo"
        android:layout_width="371dp"
        android:layout_height="180dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="131dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/appicon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    -->

    <ImageView
        android:id="@+id/backArrow"
        app:srcCompat="@drawable/ic_action_back_black"
        android:onClick="goBack"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/loginText"
        android:layout_width="371dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/sign_in"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:drawableLeft="@drawable/ic_person_white_24dp"
            android:drawablePadding="8dp"
            android:backgroundTint="@color/cardview_light_background"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            android:textColor="@color/probeis_background"
            android:textColorHint="@color/probeis_matte"
            android:cursorVisible="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/loginText" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:drawableLeft="@drawable/ic_lock_white_24dp"
            android:drawablePadding="8dp"
            android:backgroundTint="@color/cardview_light_background"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:textColor="@color/probeis_background"
            android:textColorHint="@color/probeis_matte"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username" />


    <LinearLayout
        android:id="@+id/extras"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingTop="8dp"
        app:layout_constraintStart_toStartOf="@id/password"
        app:layout_constraintEnd_toEndOf="@id/password"
        app:layout_constraintTop_toBottomOf="@+id/password">

        <Switch
            android:id="@+id/show_hide_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/remember_me"
            android:textColor="@color/probeis_matte"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/forgot"
            android:textColor="@color/probeis_matte"
            android:textSize="14sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="194dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/btn_gradient_red"
        android:enabled="true"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textSize="25sp"
        android:textColor="@color/probeis_matte"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/extras" />

    <Button
        android:id="@+id/intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="32dp"
        android:minWidth="120dp"
        android:background="@drawable/btn_gradient_white"
        android:enabled="false"
        android:text="Google"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>